logs/Citeseer_adjacency_h1_c10_b0.1_r50_run0_error.log
Command: python src/run_enhanced.py --dataset Citeseer --data_loading adjacency --num_clients 10 --beta 0.1 --rounds 50 --batch_size 256 --results_dir results/experiments_20250309_234002 --config results/experiments_20250309_234002/configs/citeseer_config.yaml --hop 1 --memory_efficient

Exit code: 1

Stdout:


Stderr:
  File "/home/brian_bosho/FP/FP/src/run_enhanced.py", line 447
    epochs_per_round = cfg.get("epochs", cfg[]"local_step", 1))
                                                              ^
SyntaxError: unmatched ')'


